--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.class
+bin/
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,3 +11,21 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+### Eclipse ###
+.project
+.classpath
+.settings/
+
+### Gradle ###
+.gradle/
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
